2008-11-10  Martin Nordholts  <martinn@svn.gnome.org>

	Bug 559716 – Changing crop size in Crop Tool Options can make UI
	unresponsive

	* app/tools/gimprectangletool.c: Accept a broader range of x, y,
	width and height values from the tool options so we don't end up
	in an infinite signal emission loop.

2008-11-10  Sven Neumann  <sven@gimp.org>

	* app/display/gimpcursorview.c: added translation context.

2008-11-10  Martin Nordholts  <martinn@svn.gnome.org>

	Bug 138101 – Pointer (Information) tab should display selection
	bounds

	* app/display/gimpcursorview.c: Show the position and size of the
	bounding box of the selection in the active image using the unit
	of the active image window.

	(gimp_cursor_view_format_as_unit): Don't add the unit abbreviation
	if the unit is px.

2008-11-10  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdrawable-curves.c (gimp_drawable_curves_explicit):
	use GIMP_CURVE_FREE, not _SMOOTH. Fixes the resp. PDB call.

2008-11-10  Sven Neumann  <sven@gimp.org>

	* app/core/gimpunit.c: use NC_() to provide translation contexts.

2008-11-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/unsharp-mask.c (unsharp_region): update the
	progress less often.

2008-11-10  Sven Neumann  <sven@gimp.org>

	* app/actions/text-tool-actions.c (text_tool_actions): added
	missing mnemonic.

2008-11-10  Sven Neumann  <sven@gimp.org>

	Bug 559725 – Allow to set image-type and image-num-layers for
	thumbnail

	* app/file/file-open.[ch] (file_open_thumbnail): added parameters
	for image-type and number of layers. Try to get these from the
	procedure return values. Changes based on a patch from "tks".

	* app/core/gimpimagefile.c (gimp_imagefile_create_thumbnail)
	(gimp_thumbnail_set_info): set image-type and number of layers if
	specified.

2008-11-10  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdrawable-foreground-extract.c
	* app/core/gimpdrawable-preview.c 
	* app/core/gimplayer-project.c: use gimp_drawable_get_colormap()